# post-it

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: graph.md
src/: api.py  main.py  settings.py  ui.py
src/nodes/: constants.py  content_nodes.py  prompts.py
src/schemas/: __init__.py
src/state/: __init__.py
tests/: conftest.py  test_api.py  test_graph.py  test_nodes.py  test_routing.py
