[project]
name = "post-it"
version = "0.1.0"
description = "An autonomous posting agent"
authors = [
    {name = "Robert Wadsworth",email = "robert.wadsworth414@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-openai (>=1.0.1,<2.0.0)",
    "langchain-tavily (>=0.2.12,<0.3.0)",
    "langgraph (>=1.0.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ruff (>=0.14.1,<0.15.0)",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Disable unused import removal (F401)
ignore = ["F401"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
