[project]
name = "post-it"
version = "0.1.0"
description = "An autonomous posting agent"
authors = [
    {name = "Robert Wadsworth",email = "robert.wadsworth414@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "langchain>=1.0.2,<2.0.0",
    "langchain-openai>=1.0.1,<2.0.0",
    "langchain-tavily>=0.2.12,<0.3.0",
    "langgraph>=1.0.1,<2.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1,<0.15.0",
]

[tool.ruff]
# Disable unused import removal (F401)
ignore = ["F401"]

[tool.uv]
package = false